# youtube_blog_pipeline

./: .gitignore  README.md  __init__.py  app.py  config.py  main.py  pyproject.toml
agents/: google_client.py  lmstudio_client.py  lmstudio_embeddings.py  lmstudio_manager.py  outline_agent.py  review_agent.py  writing_agent.py
assembly/: blog_assembler.py
chaptering/: cluster.py  map_reduce.py  paragraphs.py  pipeline.py  windows.py
postprocessing/: emoji_cleaner.py  timestamp_cleaner.py
processing/: text_processing.py
scripts/: start_lmstudio.py
services/: transcript_service.py
tests/: __init__.py  conftest.py  test_agents.py  test_assembly.py  test_main_pipeline.py  test_text_processing.py  test_timestamp_cleaner.py  test_transcript_service.py
